--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,10 +1,12 @@
 .home_container {
+    top: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 400px;
+    padding: 50px;
+    flex-wrap: wrap;
   }
   
   .home_container h1 {
